@@ -79,6 +79,13 @@ The features.conf general section has three new configurable options:
 For more information on what these options do, see the Asterisk wiki:
 	https://wiki.asterisk.org/wiki/x/W4fAAQ
 
+Channel Drivers
+------------------
+
+chan_pjsip
+------------------
+ * New 'media_encryption_optimistic' endpoint setting. This will use SRTP
+   when possible but does not consider lack of it a failure.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 12 to Asterisk 13 --------------------
